Added Pull Request

--- a/.github/workflows/automate.yml
+++ b/.github/workflows/automate.yml
@@ -3,6 +3,9 @@ name: Testing The Application
 on:
     push:
       branches: [ "main" ]
+    pull_request:
+      branches: [ "main" ]
+
 
 jobs:
     build:
